--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">android-lab-2</string>
+    <string name="contact_name">Contact Name</string>
+    <string name="call">Позвонить</string>
 </resources>
